objects/SBQQ__CustomScript__c.object
<CustomObject>
    <description>Script that can be executed by an outside resource</description>
    <fields>
        <fullName>SBQQ__Code__c</fullName>
        <description>Script code</description>
        <inlineHelpText>Code that can be executed by an outside resource.</inlineHelpText>
        <label>Code</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SBQQ__ConsumptionRateFields__c</fullName>
        <description>Fields on the ConsumptionRate object referenced by this plugin</description>
        <inlineHelpText>API names of consumption rate fields referenced by this plugin. Enter as many as 10 fields, one field on each line..</inlineHelpText>
        <label>Consumption Rate Fields</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SBQQ__ConsumptionScheduleFields__c</fullName>
        <description>Fields on the ConsumptionSchedule object referenced by this plugin</description>
        <inlineHelpText>API names of consumption schedule fields referenced by this plugin. Enter as many as 10 fields, one field on each line.</inlineHelpText>
        <label>Consumption Schedule Fields</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SBQQ__GroupFields__c</fullName>
        <description>Fields on the QuoteLineGroup__c object referenced by this plugin</description>
        <inlineHelpText>Enter the API names of any Quote Line Group fields referenced by this plugin, one per line.</inlineHelpText>
        <label>Quote Line Group Fields</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SBQQ__QuoteFields__c</fullName>
        <description>Fields on the Quote__c object referenced by this plugin</description>
        <inlineHelpText>Enter the API names of any Quote fields referenced by this plugin, one per line.</inlineHelpText>
        <label>Quote Fields</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SBQQ__QuoteLineFields__c</fullName>
        <description>QuoteLine__c fields referenced by the plugin</description>
        <inlineHelpText>Enter the API names of all Quote Line fields referenced by this plugin, one per line.</inlineHelpText>
        <label>Quote Line Fields</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SBQQ__TranspiledCode__c</fullName>
        <description>Script Code transpiled to ES5</description>
        <label>Transpiled Code</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <label>Custom Script</label>
    <listViews>
        <fullName>SBQQ__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Script Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom Scripts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>